# cryptoagent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  crypto-trading-agents-research.md  pyproject.toml
api/: server.py
cryptoagent/: __init__.py  config.py
cryptoagent/agents/: brain.py  macro.py  research.py  sentiment.py  trader.py
cryptoagent/cli/: main.py
cryptoagent/dataflows/: aggregator.py  regime.py
cryptoagent/dataflows/macro/: classifier.py  fred.py
cryptoagent/execution/: paper_trade.py  router.py
cryptoagent/graph/: builder.py  state.py
cryptoagent/llm/: client.py
cryptoagent/persistence/: database.py  reflection_store.py  trade_logger.py
cryptoagent/reflection/: manager.py
cryptoagent/risk/: sentinel.py
cryptoagent/signals/: __init__.py  evaluator.py  extractor.py  logger.py  report.py
dashboard/: package-lock.json  package.json  playwright.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/app/chat/: page.tsx
dashboard/components/: action-badge.tsx  chat-panel.tsx  regime-badge.tsx  run-trigger.tsx  sidebar.tsx  signal-chart.tsx  stat-card.tsx  trade-table.tsx
dashboard/e2e/: chat.spec.ts  navigation.spec.ts  overview.spec.ts  reflections.spec.ts  signals.spec.ts  trades.spec.ts
dashboard/lib/: fetcher.ts  schema.ts  types.ts
dashboard/scripts/: seed.ts
docs/: ARCHITECTURE.md  VISION.md  operations.md  todo.md
tests/: conftest.py  test_paper_trade.py  test_persistence.py  test_reflection_manager.py  test_regime.py  test_risk_sentinel.py  test_signal_evaluator.py  test_signals_extractor.py
(+19 files in other folders)
