[project]
name = "cryptoagent"
version = "0.1.0"
description = "Multi-agent LLM trading system"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.55",
    "langgraph>=0.2",
    "ccxt>=4.4",
    "pandas>=2.2",
    "numpy>=2.1",
    "ta>=0.11",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rich>=13.9",
    "typer>=0.15",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptoagent"]
