[project]
name = "cryptoagent"
version = "0.1.0"
description = "Multi-agent LLM trading system"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.55",
    "langgraph>=0.2",
    "ccxt>=4.4",
    "pandas>=2.2",
    "numpy>=2.1",
    "ta>=0.11",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "rich>=13.9",
    "typer>=0.15",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[dependency-groups]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "freezegun>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptoagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure logic tests — no I/O, no mocking",
    "integration: Tests requiring DB or mocked externals",
]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = ["PT"]  # pytest style rules
